dev 8051 design feedback-add line height to labels, fix legend  spacing, fix y axis spacing

--- a/src/_scss/pages/agencyV2/statusOfFunds/_visualizationSection.scss
+++ b/src/_scss/pages/agencyV2/statusOfFunds/_visualizationSection.scss
@@ -5,7 +5,9 @@
         }
     }
     .status-of-funds__visualization-chart {
-        margin-bottom: rem(16);
+        @media(min-width: $large-screen) {
+            margin-left: rem(32);
+        }
     }
     h6 {
         font-size: rem(20);
